--- a/Homework 1/COM_S_5730_HW1.tex
+++ b/Homework 1/COM_S_5730_HW1.tex
@@ -16,7 +16,7 @@
 \begin{document}
 
 \begin{center}
-{\Large \textbf{COM S 573 Homework 1}}\\
+{\Large \textbf{COM S 5730 Homework 1}}\\
 
 \linethickness{1mm}\line(1,0){498}
 
@@ -25,7 +25,7 @@
 compressed file ``HW1\_FirstName\_LastName.zip''
 \item Unlimited number of submissions are
 allowed on Canvas and the latest one will be graded.
-\item Due: \textbf{Thursday February 1, 2024 at 11:59pm.}
+\item Due: \textbf{Thursday Sept. 12, 2024 at 11:59pm.}
 \item {\color{red} No later submission is accepted.}
 \item Please read and follow submission instructions. No exception
 will be made to accommodate incorrectly submitted files/reports.
