--- a/homework/homework_1/code/data_exploration.ipynb
+++ b/homework/homework_1/code/data_exploration.ipynb
@@ -50,7 +50,7 @@
    ],
    "source": [
     "# Data locations\n",
-    "datapath = \"../../data/\"\n",
+    "datapath = \"../../../data/\"\n",
     "train_loc = datapath + \"train.txt\"\n",
     "test_loc = datapath + \"test.txt\"\n",
     "\n",
@@ -422,7 +422,7 @@
     }
    ],
    "source": [
-    "show_features(X, label, save=True)"
+    "show_features(X, label, save=False)"
    ]
   }
  ],
