--- a/homework/homework_3/code/ID3.ipynb
+++ b/homework/homework_3/code/ID3.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 336,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": 373,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,33 +388,109 @@
     "    Returns:\n",
     "        a pruned tree\n",
     "    \"\"\"\n",
-    "    ### YOUR CODE HERE\n",
-    "\n",
-    "    # If the tree is a leaf, return it as it can't be pruned\n",
+    "    # If the tree is a leaf, return it directly\n",
     "    if type(tree) == int:\n",
-    "        return tree \n",
+    "        return tree\n",
     "\n",
-    "    # Test current tree accuracy\n",
+    "    # Test current accuracy before pruning\n",
     "    original_accuracy = test_data(tree, data)\n",
     "\n",
-    "    # Prune each subtree and test accuracy\n",
+    "    # Prune each subtree recursively\n",
     "    for value, subtree in tree.subtrees.items():\n",
-    "        if type(subtree) != int:  # If the subtree is not a leaf\n",
+    "        if type(subtree) != int:\n",
     "            # Recursively prune the subtree\n",
     "            tree.subtrees[value] = prune_tree(subtree, data)\n",
     "\n",
-    "    # Test accuracy after pruning\n",
+    "    # Test accuracy after pruning subtrees\n",
     "    pruned_accuracy = test_data(tree, data)\n",
     "\n",
-    "    # If pruning didn't improve accuracy, revert the tree to its original state\n",
-    "    if pruned_accuracy < original_accuracy:\n",
-    "        for value, subtree in tree.subtrees.items():\n",
-    "            if type(subtree) != int:\n",
-    "                # Undo pruning by replacing pruned subtree with the original subtree\n",
-    "                tree.subtrees[value] = prune_tree(subtree, data, revert=True)\n",
+    "    # If pruning does not decrease the error, try replacing the subtree with a leaf node\n",
+    "    if pruned_accuracy >= original_accuracy:\n",
+    "        # Create a leaf node based on the majority class in the current node\n",
+    "        leaf_label = max(tree.ys, key=tree.ys.get)\n",
+    "        pruned_tree = leaf_label\n",
     "\n",
+    "        # Test the accuracy if we prune the entire current subtree\n",
+    "        temp_accuracy = test_data(pruned_tree, data)\n",
     "\n",
-    "    ### END YOUR CODE\n"
+    "        # If accuracy does not decrease, replace the subtree with the leaf\n",
+    "        if temp_accuracy >= pruned_accuracy:\n",
+    "            return pruned_tree\n",
+    "\n",
+    "    # If pruning was not beneficial, return the original tree\n",
+    "    return tree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 374,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import copy\n",
+    "import random\n",
+    "from helper import read_data\n",
+    "\n",
+    "def test_tree_accuracy(data):\n",
+    "    random.seed(1)\n",
+    "    print('=' * 58)\n",
+    "    trainlen = len(data['train'])\n",
+    "\n",
+    "    train_data = data['train']\n",
+    "    random.shuffle(train_data)\n",
+    "\n",
+    "    tree = build_tree(train_data[:int(trainlen * 0.8)])\n",
+    "    print(\n",
+    "        'Validate accuracy on tree without pruning ========>',\n",
+    "        test_data(tree, train_data[int(trainlen * 0.8):]))\n",
+    "    Ptree = prune_tree(\n",
+    "        copy.deepcopy(tree), train_data[int(trainlen * 0.8):])\n",
+    "    print(\n",
+    "        'Validate accuracy on tree with pruning ===========>',\n",
+    "        test_data(Ptree, train_data[int(trainlen * 0.8):]))\n",
+    "    print(\n",
+    "        'Test accuracy on tree without pruning ============>',\n",
+    "        test_data(tree, data['test']))\n",
+    "    print(\n",
+    "        'Test accuracy on tree with pruning ===============>',\n",
+    "        test_data(Ptree, data['test']))\n",
+    "    print('Tree size without pruning ========================> %6d' % (\n",
+    "        tree.size))\n",
+    "    print('Tree size with pruning ===========================> %6d' % (\n",
+    "        Ptree.size))\n",
+    "    print('Tree depth without pruning =======================> %6d' % (\n",
+    "        tree.depth))\n",
+    "    print('Tree depth with pruning ==========================> %6d' % (\n",
+    "        Ptree.depth))\n",
+    "    print('=' * 58)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 375,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "==========================================================\n",
+      "Validate accuracy on tree without pruning ========> 0.8881\n",
+      "Validate accuracy on tree with pruning ===========> 0.6895\n",
+      "Test accuracy on tree without pruning ============> 0.8757\n",
+      "Test accuracy on tree with pruning ===============> 0.6908\n",
+      "Tree size without pruning ========================>    288\n",
+      "Tree size with pruning ===========================>      4\n",
+      "Tree depth without pruning =======================>      7\n",
+      "Tree depth with pruning ==========================>      2\n",
+      "==========================================================\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = read_data(dataloc='../data/car_evaluation.csv')\n",
+    "\n",
+    "test_tree_accuracy(data)"
    ]
   },
   {
